一通り動いた版

--- a/TRCNG/index.html
+++ b/TRCNG/index.html
@@ -12,17 +12,17 @@
         gtag('config', 'UA-148521123-1');
     </script>
     <link rel="icon" href="./favicon/favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon/favicon-16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="./favicon/favicon-32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="./favicon/favicon-192.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="./favicon/favicon-152.png" sizes="152x152">
+    <link rel="icon" type="image/png" href="./favicon/icon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./favicon/icon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./favicon/icon-192x192.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="./favicon/icon-152x152.png" sizes="152x152">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@iwasaku">
-    <meta property="og:url" content="https://iwasaku.github.io/test6/ZGZG/index.html">
-    <meta property="og:title" content="ZGZG">
-    <meta property="og:description" content="sptnk">
-    <meta property="og:image" content="https://iwasaku.github.io/test6/ZGZG/favicon/favicon-192.png">
+    <meta property="og:url" content="https://iwasaku.github.io/tes14/TRCNG/index.html">
+    <meta property="og:title" content="TRCN">
+    <meta property="og:description" content="go">
+    <meta property="og:image" content="https://iwasaku.github.io/test14/TRCNG/favicon/favicon-192.png">
 
     <meta charset="UTF-8" />
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -30,13 +30,17 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>ZG-ZG SPTNK</title>
+    <title>TRCN GO</title>
     <style>
+        @font-face {
+            font-family: 'misaki_gothic';
+            src: url('https://cdn.leafscape.be/misaki/misaki_gothic_web.woff2') format("woff2");
+        }
+
         body {
             background-color: #000000;
         }
     </style>
-    <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
     <script src="https://cdn.jsdelivr.net/gh/phi-jp/tmlib.js@0.3.0/build/tmlib.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
     <script src='enum.js'></script>
