--- a/TRCNG/index.html
+++ b/TRCNG/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@iwasaku">
     <meta property="og:url" content="https://iwasaku.github.io/tes14/TRCNG/index.html">
-    <meta property="og:title" content="TRCN">
+    <meta property="og:title" content="TARACHINE GO">
     <meta property="og:description" content="go">
     <meta property="og:image" content="https://iwasaku.github.io/test14/TRCNG/favicon/favicon-192.png">
 
