テスト用TRCNGを作成 デバッグモードを作成

--- a/NMLSG/index.html
+++ b/NMLSG/index.html
@@ -20,8 +20,8 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@iwasaku">
     <meta property="og:url" content="https://iwasaku.github.io/test14/NMLSG/index.html">
-    <meta property="og:title" content="TARACHINE GO">
-    <meta property="og:description" content="go">
+    <meta property="og:title" content="NxMxLxSSS GO">
+    <meta property="og:description" content="gogogo">
     <meta property="og:image" content="https://iwasaku.github.io/test14/NMLSG/favicon/icon-192x192.png">
 
     <meta charset="UTF-8" />
