デバッグの最大値を修正

--- a/DEBUG/index.html
+++ b/DEBUG/index.html
@@ -126,12 +126,12 @@
             <td colspan="2"><br></td>
         </tr>
         <tr>
-            <td><label for="name">最高スコア（0〜40000）</label></td>
-            <td><input type="number" id="max_score" min="0" max="99999" onchange="update();" required></td>
+            <td><label for="name">最高スコア（0〜100000）</label></td>
+            <td><input type="number" id="max_score" min="0" max="199999" onchange="update();" required></td>
         </tr>
         <tr>
-            <td><label for="name">累計スコア（0〜200000）</label></td>
-            <td><input type="number" id="total_score" min="0" max="999999" onchange="update();" required></td>
+            <td><label for="name">累計スコア（0〜2000000）</label></td>
+            <td><input type="number" id="total_score" min="0" max="2999999" onchange="update();" required></td>
         </tr>
         <tr>
             <td colspan="2"><br></td>
